# blobserver_ibr

./: .gitignore  configure.ac  cuda.mk  cudalt.py
data/: ibr.blend  ibr.py  ibr.xml
src/: Makefile.am  accumulator.cu  accumulator.h  ibr.cpp  ibr.h  template.cpp  template.h
